fixed cutoff issue

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,6 +6,7 @@
   align-items: center;
   border-radius: 10px;
   margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .navbar-container {
